# bazel-config-abstraction

./: MODULE.bazel  README.md  demonstrate.sh
configs/: BUILD.bazel  README.md
configs/constraints/: BUILD.bazel
multiply/: multiply_rule.bzl  parse_animal_configs.bzl
product/multiplyable_service/: BUILD.bazel
product/service1/: BUILD.bazel
product/service2/: BUILD.bazel
projects/projectA/: BUILD.bazel  animals_config.json  configfile.txt  other_config.json
projects/projectA/package/: BUILD.bazel
projects/projectB/: BUILD.bazel  animals_config.json  configfile.txt
projects/projectC/: BUILD.bazel  animals_config.json  configfile.txt  proprietary_format.txt
projects/projectC/package/: BUILD.bazel
