"""Bazel configuration abstraction"""

module(
    name = "main",
    version = "",
)

bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.14.0")

parse_animals_repo = use_repo_rule("//multiply:parse_animal_configs.bzl", "parse_animals_repo")

parse_animals_repo(
    name = "parse_animals_repo",
)
