package(default_visibility = ["//visibility:public"])

# List of tuples to match the constraints to locations in the projects folder
known_projects = [
    ("projectA", "//projects/projectA"),
    ("projectB", "//projects/projectB"),
    ("projectC", "//projects/projectC"),
]

active_projects = [
    "projectA",
    "projectB",
    "projectC",
]

filegroup(
    name = "config_for_service1",
    srcs = select({
        "//configs/constraints:{name}".format(name = name): ["{path}:config_for_service1".format(path = path)]
        for name, path in known_projects
        if name in active_projects
    }),
)

filegroup(
    name = "config_for_service2",
    srcs = select({
        "//configs/constraints:{name}".format(name = name): ["{path}:config_for_service2".format(path = path)]
        for name, path in known_projects
        if name in active_projects
    }),
)
