package(default_visibility = ["//visibility:public"])

# Set project constraints
constraint_setting(name = "project_variant")

constraint_value(
    name = "ProjectA",
    constraint_setting = ":project_variant",
)

constraint_value(
    name = "ProjectB",
    constraint_setting = ":project_variant",
)

constraint_value(
    name = "ProjectC",
    constraint_setting = ":project_variant",
)
