package(default_visibility = ["//visibility:public"])

# Set project constraints
constraint_setting(name = "project_variant")

constraint_value(
    name = "projectA",
    constraint_setting = ":project_variant",
)

constraint_value(
    name = "projectB",
    constraint_setting = ":project_variant",
)

constraint_value(
    name = "projectC",
    constraint_setting = ":project_variant",
)
