load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "config_for_service1",
    srcs = ["configfile.txt"],
)

# Custom transformer for config for service 2 for this project
genrule(
    name = "config_for_service2",
    srcs = ["proprietary_format.txt"],
    outs = ["generated_configfile.txt"],
    cmd = "cat $(location proprietary_format.txt) | grep useful > $@",
)

platform_transition_filegroup(
    name = "final_output",
    srcs = [
        "//product/service1:create_service_1",
        "//product/service2:create_service_2",
    ],
    target_platform = "//configs/platforms:ProjectC",
)
